WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241000
Stop exposing ApplicationCache API if it is not enabled
https://bugs.webkit.org/show_bug.cgi?id=241000
Summary
Stop exposing ApplicationCache API if it is not enabled
Sihui Liu
Reported
2022-05-26 20:36:07 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2022-05-26 20:37:11 PDT
rdar://79787113
Sihui Liu
Comment 2
2022-05-26 21:29:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1085
EWS
Comment 3
2022-05-27 12:55:36 PDT
Committed
r294949
(
251057@main
): <
https://commits.webkit.org/251057@main
> Reviewed commits have been landed. Closing PR #1085 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug