Stop exposing ApplicationCache API if it is not enabled https://bugs.webkit.org/show_bug.cgi?id=241000

Reviewed by Chris Dumez.

* Source/WebCore/bindings/js/WebCoreBuiltinNames.h:
* Source/WebCore/loader/appcache/DOMApplicationCache.idl:
* Source/WebCore/page/DOMWindow.idl:

Canonical link: https://commits.webkit.org/251057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294949 268f45cc-cd09-0410-ab3c-d52691b4dbfc